--- a/presentations.html
+++ b/presentations.html
@@ -97,6 +97,17 @@
               </ul>
               <ul>
                 <li>
+                  <strong>Research Progress: </strong
+                  ><a>Rydberg Quantum Computing and Compilation</a><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;July 23,
+                  2024<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Quantum
+                  Control System Group, Beijing Academy of Quantum Information
+                  Sciences
+                </li>
+              </ul>
+              <ul>
+                <li>
                   <strong>Course Presentation: </strong
                   ><a href="/docs/presentations/2024-02-22-scaling.pdf"
                     >Architectures and Approaches in Scaling the Trapped-Ion
