--- a/presentations.html
+++ b/presentations.html
@@ -85,6 +85,20 @@
               <ul>
                 <li>
                   <strong>Research Progress: </strong
+                  ><a
+                    >ZAP: Zoned Architecture and Parallelizable Compiler for
+                    FPQA </a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;November 05,
+                  2024<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Quantum
+                  Control System Group, Beijing Academy of Quantum Information
+                  Sciences
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <strong>Research Progress: </strong
                   ><a href="/docs/presentations/2024-08-21-charge-noise.pdf"
                     >Charge Noise in Semiconductor Spin Qubits for Quantum
                     Computing</a
