--- a/presentations.html
+++ b/presentations.html
@@ -105,8 +105,8 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;August 21,
                   2024<br />
-                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Blackett
-                  Laboratory, Imperial College London
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Quantum
+                  Optics and Laser Science (QOLS) Group, Imperial College London
                 </li>
               </ul>
               <ul>
@@ -188,8 +188,9 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;January 14,
                   2022<br />
-                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
-                  Physics, Huazhong University of Science and Technology
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;International
+                  Joint Lab on Quantum Sensing and Quantum Metrology, Huazhong
+                  University of Science and Technology
                 </li>
               </ul>
             </section>
@@ -204,8 +205,9 @@
                     >An Introduction to Ghost Imagine: Quantum and Classical</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 8, 2021<br />
-                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
-                  Physics, Huazhong University of Science and Technology
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;International
+                  Joint Lab on Quantum Sensing and Quantum Metrology, Huazhong
+                  University of Science and Technology
                 </li>
               </ul>
               <ul>
@@ -227,8 +229,9 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;April 20,
                   2021<br />
-                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
-                  Physics, Huazhong University of Science and Technology
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;International
+                  Joint Lab on Quantum Sensing and Quantum Metrology, Huazhong
+                  University of Science and Technology
                 </li>
               </ul>
               <ul>
@@ -240,8 +243,9 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;March 30,
                   2021<br />
-                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
-                  Physics, Huazhong University of Science and Technology
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;International
+                  Joint Lab on Quantum Sensing and Quantum Metrology, Huazhong
+                  University of Science and Technology
                 </li>
               </ul>
             </section>
