--- a/presentations.html
+++ b/presentations.html
@@ -122,6 +122,18 @@
               </ul>
               <ul>
                 <li>
+                  <strong>Journal Club: </strong
+                  ><a href="/docs/presentations/2024-05-28-Rydberg.pdf"
+                    >Quantum Computing with Rydberg Atoms</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;May 28, 2024<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Quantum
+                  Control System Group, Beijing Academy of Quantum Information
+                  Sciences
+                </li>
+              </ul>
+              <ul>
+                <li>
                   <strong>Course Presentation: </strong
                   ><a href="/docs/presentations/2024-02-22-scaling.pdf"
                     >Architectures and Approaches in Scaling the Trapped-Ion
