--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,11 @@
         <div class="container">
           <article id="publications" class="special">
             <header>
-              <h2><a href="#publications" class="scrolly">Publications</a></h2>
+              <h2>
+                <a href="#publications" class="scrolly"
+                  >Publications & Preprints</a
+                >
+              </h2>
             </header>
             <section>
               <header>
