--- a/zh/research/index.html
+++ b/zh/research/index.html
@@ -77,7 +77,7 @@
               <header>
                 <h3>Contents</h3>
               </header>
-              <h4>第一章：步入量子世界</h4>
+              <h4><a href="chapter-1.html">第一章：步入量子世界</a></h4>
               <p></p>
               <section></section>
             </div>
