--- a/zh/quantum/index.html
+++ b/zh/quantum/index.html
@@ -88,7 +88,7 @@
                   所以目前你会看到这里堆叠着各种装修材料————非常零碎的草稿......
                 </p>
                 <p>
-                  霍金曾经说“每增加一个公式，就少一半读者。”因此作为科普，我尽量避免公式，而用准确有趣的语言来描述。这对我的挑战非常大，众所周知，物理学研究人员更擅长用公式说话。
+                  霍金曾经说“每增加一个公式，就少一半读者。”因此作为科普，我尽量避免公式，而用准确有趣的语言来描述。但对于追求精确的科学，我又希望带给读者的每一个信息都是可验证的，因此我仍然会在我的文字中加入详细的推导，但如果你不喜欢公式，完全可以跳过这些部分，不影响对整体内容的理解，只需要知道，这个结论是有依据的。
                 </p>
                 <header>
                   <h2>什么是量子计算</h2>
