--- a/photography.html
+++ b/photography.html
@@ -37,7 +37,8 @@
               <a href="/research/index.html">Research</a>
               <ul>
                 <li>
-                  <a href="/research/compilation-for-neutral-atom-quantum-computers.html"
+                  <a
+                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
                     >Compilation for neutral atom quantum computers</a
                   >
                 </li>
@@ -47,7 +48,8 @@
                   >
                 </li>
                 <li>
-                  <a href="/research/charge-noise-in-semiconductor-spin-qubits.html"
+                  <a
+                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge noise in semiconductor spin qubits</a
                   >
                 </li>
@@ -72,8 +74,9 @@
           <article id="photography" class="special">
             <header>
               <h2><a href="#photography" class="scrolly">Photography</a></h2>
-              <p>I enjoy capturing the beauty of the world. 
-              Here are some of my favorite photos.</p>
+              <p>
+                I enjoy capturing the beauty of the world. Here are some of my
+                favorite photos.
               </p>
             </header>
           </article>
@@ -83,6 +86,26 @@
       <!-- Carousel -->
       <section class="carousel">
         <div class="reel">
+          <article>
+            <a href="/images/photograph/full/london.jpg" class="image featured"
+              ><img src="/images/photograph/small/london.jpg" alt=""
+            /></a>
+            <header>
+              <h3><a>London, UK</a></h3>
+            </header>
+            <p>December 2024</p>
+          </article>
+
+          <article>
+            <a href="/images/photograph/full/london2.JPG" class="image featured"
+              ><img src="/images/photograph/small/london2.jpeg" alt=""
+            /></a>
+            <header>
+              <h3><a>London, UK</a></h3>
+            </header>
+            <p>December 2024</p>
+          </article>
+
           <article>
             <a href="/images/photograph/full/regents.jpg" class="image featured"
               ><img src="/images/photograph/small/regents.jpeg" alt=""
@@ -138,7 +161,9 @@
           </article>
 
           <article>
-            <a href="/images/photograph/full/morocco2.JPG" class="image featured"
+            <a
+              href="/images/photograph/full/morocco2.JPG"
+              class="image featured"
               ><img src="/images/photograph/small/morocco2.jpeg" alt=""
             /></a>
             <header>
@@ -148,7 +173,9 @@
           </article>
 
           <article>
-            <a href="/images/photograph/full/beihai_park.JPG" class="image featured"
+            <a
+              href="/images/photograph/full/beihai_park.JPG"
+              class="image featured"
               ><img src="/images/photograph/small/beihai_park.jpeg" alt=""
             /></a>
             <header>
