--- a/publications.html
+++ b/publications.html
@@ -85,9 +85,10 @@
               </header>
               <ul>
                 <li>
-                  <strong>C. Huang</strong>, X. Zhao, H. Xu, W. Zhuang, M.-J.
-                  Hu, D. E. Liu, and J. Wang, "ZAP: Zoned Architecture and
-                  Parallelizable Compiler for Field Programmable Atom Array,"
+                  <strong>Chen Huang</strong>, Xi Zhao, Hongze Xu, Weifeng
+                  Zhuang, Meng-Jun Hu, Dong E. Liu, and Jingbo Wang, "ZAP: Zoned
+                  Architecture and Parallelizable Compiler for Field
+                  Programmable Atom Array,"
                   <i
                     >arXiv preprint
                     <a href="https://arxiv.org/abs/2411.14037"
@@ -109,7 +110,7 @@
               </header>
               <ul>
                 <li>
-                  J. Wang and <strong>C. Huang</strong>, "Ion trap chip
+                  Jingbo Wang and <strong>Chen Huang</strong>, "Ion trap chip
                   parameter determining method and device, electronic equipment
                   and medium,"
                   <i
@@ -120,7 +121,7 @@
                   >, Granted 2023.
                 </li>
                 <li>
-                  J. Wang and <strong>C. Huang</strong>, "Ion trap chip
+                  Jingbo Wang and <strong>Chen Huang</strong>, "Ion trap chip
                   parameter calibration method and device, electronic equipment
                   and medium,"
                   <i
@@ -131,7 +132,7 @@
                   >, Granted 2023.
                 </li>
                 <li>
-                  <strong>C. Huang</strong> and J. Wang, "Ion trap chip
+                  <strong>Chen Huang</strong> and Jingbo Wang, "Ion trap chip
                   parameter correction method and device, electronic equipment
                   and medium,"
                   <i
