--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <hr />
               <section>
                 <header>
-                  <h3><a>Skills</a></h3>
+                  <h3><a>Technical skills</a></h3>
                 </header>
                 <div class="row gtr-50">
                   <div class="col-4">
@@ -292,7 +292,7 @@
                       <div
                         class="progress-bar"
                         id="progress-bar"
-                        style="width: 80%"
+                        style="width: 85%"
                       ></div>
                     </div>
                   </div>
@@ -556,7 +556,7 @@
           </header>
           <p>
             During May 2019 - July 2020, I was the
-            <strong>chairperson</strong> of IBPE. I was the only female leader
+            <strong>chairperson</strong> of IBPE. I was the first female leader
             of the platform since its establishment in 2002.
           </p>
           <div class="row">
