--- a/notes/index.html
+++ b/notes/index.html
@@ -92,7 +92,7 @@
                 </h4>
                 <p></p>
                 <h4>
-                  <a href="#others" class="scrolly">Others</a>
+                  <a href="#others" class="scrolly">Self-Study</a>
                 </h4>
                 <p></p>
               </section>
