--- a/presentations.html
+++ b/presentations.html
@@ -286,7 +286,8 @@
               <ul>
                 <li>
                   <strong>Class Presentation: </strong
-                  ><a href="/docs/presentations/2019-12-16-magnetic-field.pdf"
+                  ><a
+                    href="/docs/presentations/2019-11-16-magnetic-field-distribution.pdf"
                     >Magnetic Field Distribution in Current-Carrying Solenoids
                     and Helmholtz Coils</a
                   ><br />
