--- a/research/index.html
+++ b/research/index.html
@@ -120,9 +120,7 @@
                   My work in <strong>quantum compilation</strong> has allowed me
                   to explore the logical layer, deepening my understanding of
                   the interactions between these levels. I am also eager to
-                  explore different <strong>quantum algorithms</strong>, and
-                  achieve different applications, such as quantum simulations
-                  and quantum machine learning.
+                  explore different quantum applications.
                 </p>
                 <a class="image featured"
                   ><img src="/images/quantum-computer-levels.jpeg" alt=""
