--- a/research/index.html
+++ b/research/index.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="/index.html" id="logo">Chen's Physics World</a></h1>
+            <h1>Chen's Physics World</h1>
           </header>
         </div>
 
