--- a/notes/year.html
+++ b/notes/year.html
@@ -114,7 +114,12 @@
                 <section id="2024">
                   <header>
                     <h3>
-                      <a href="#2024" class="scrolly">2024</a>
+                      <a
+                        href="#2024"
+                        class="scrolly"
+                        style="background-color: lightgray"
+                        >2024</a
+                      >
                     </h3>
                   </header>
                   <ul>
