--- a/notes/year.html
+++ b/notes/year.html
@@ -113,13 +113,8 @@
                 </header>
                 <section id="2024">
                   <header>
-                    <h3>
-                      <a
-                        href="#2024"
-                        class="scrolly"
-                        style="background-color: lightgray"
-                        >2024</a
-                      >
+                    <h3 style="background-color: lightgray">
+                      <a href="#2024" class="scrolly">2024</a>
                     </h3>
                   </header>
                   <ul>
