--- a/notes/year.html
+++ b/notes/year.html
@@ -113,8 +113,10 @@
                 </header>
                 <section id="2024">
                   <header>
-                    <h3 style="background-color: lightgray">
-                      <a href="#2024" class="scrolly">2024</a>
+                    <h3>
+                      <a href="#2024" class="scrolly" style="color: #ef8376"
+                        >2024</a
+                      >
                     </h3>
                   </header>
                   <ul>
