--- a/notes/year.html
+++ b/notes/year.html
@@ -155,11 +155,12 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
                 <section id="2023">
                   <header>
                     <h3>
-                      <a href="#2023" class="scrolly">2023</a>
+                      <a href="#2023" class="scrolly" style="color: #ef8376"
+                        >2023</a
+                      >
                     </h3>
                   </header>
                   <ul>
