--- a/notes/index.html
+++ b/notes/index.html
@@ -215,12 +215,11 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
 
                 <section id="hust">
                   <header>
                     <h3>
-                      <a href="#hust" class="scrolly">
+                      <a href="#hust" class="scrolly" style="color: #ef8376">
                         Huazhong University of Science and Technology</a
                       >
                     </h3>
@@ -485,11 +484,12 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
                 <section id="pku">
                   <header>
                     <h3>
-                      <a href="#pku" class="scrolly">Peking University</a>
+                      <a href="#pku" class="scrolly" style="color: #ef8376"
+                        >Peking University</a
+                      >
                     </h3>
                   </header>
                   <section id="pku-quantum-mechanics">
@@ -539,11 +539,12 @@
                     </ul>
                   </section>
                 </section>
-                <hr />
                 <section id="others">
                   <header>
                     <h3>
-                      <a href="#others" class="scrolly">Others</a>
+                      <a href="#others" class="scrolly" style="color: #ef8376"
+                        >Self-Study</a
+                      >
                     </h3>
                   </header>
                   <ul>
