--- a/notes/year.html
+++ b/notes/year.html
@@ -215,11 +215,12 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
                 <section id="2021">
                   <header>
                     <h3>
-                      <a href="#2021" class="scrolly">2021</a>
+                      <a href="#2021" class="scrolly" style="color: #ef8376"
+                        >2021</a
+                      >
                     </h3>
                   </header>
                   <ul>
@@ -292,11 +293,12 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
                 <section id="2020">
                   <header>
                     <h3>
-                      <a href="#2020" class="scrolly">2020</a>
+                      <a href="#2020" class="scrolly" style="color: #ef8376"
+                        >2020</a
+                      >
                     </h3>
                   </header>
                   <ul>
@@ -484,11 +486,12 @@
                     </li>
                   </ul>
                 </section>
-                <hr />
                 <section id="2019">
                   <header>
                     <h3>
-                      <a href="#2019" class="scrolly">2019</a>
+                      <a href="#2019" class="scrolly" style="color: #ef8376"
+                        >2019</a
+                      >
                     </h3>
                   </header>
                   <ul>
