--- a/notes/index.html
+++ b/notes/index.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>Chen's Physics World</h1>
+            <h1>Notes</h1>
           </header>
         </div>
 
@@ -108,13 +108,10 @@
                   >&nbsp;&nbsp; <i class="fas fa-calendar-check"></i>&nbsp;
                   <a href="/notes/year.html">Year</a>
                 </p>
-                <header>
-                  <h2><a href="#main" class="scrolly">Notes</a></h2>
-                </header>
                 <section id="imperial">
                   <header>
                     <h3>
-                      <a href="#imperial" class="scrolly"
+                      <a href="#imperial" class="scrolly" style="color: #ef8376"
                         >Imperial College London</a
                       >
                     </h3>
@@ -215,7 +212,6 @@
                     </li>
                   </ul>
                 </section>
-
                 <section id="hust">
                   <header>
                     <h3>
