--- a/notes/year.html
+++ b/notes/year.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>Chen's Physics World</h1>
+            <h1>Notes</h1>
           </header>
         </div>
 
@@ -108,9 +108,6 @@
                   >&nbsp;&nbsp; <i class="fas fa-calendar-check"></i>&nbsp;
                   <a href="/notes/year.html">Year</a>
                 </p>
-                <header>
-                  <h2><a href="#main" class="scrolly">Notes</a></h2>
-                </header>
                 <section id="2024">
                   <header>
                     <h3>
