--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>Chen's Physics World</h1>
+            <h1>Publications</h1>
           </header>
         </div>
 
