--- a/presentations.html
+++ b/presentations.html
@@ -26,7 +26,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>Chen's Physics World</h1>
+            <h1>Presentations</h1>
           </header>
         </div>
 
@@ -73,11 +73,6 @@
       <div class="wrapper style1">
         <div class="container">
           <article id="presentations" class="special">
-            <header>
-              <h2>
-                <a href="#presentations" class="scrolly">Presentations</a>
-              </h2>
-            </header>
             <section>
               <header>
                 <h3>2024</h3>
