--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                       Academy of Sciences, 2020.
                     </li>
                     <li>
-                      <strong>Yan Ji-ci Scholarship</strong>, Institute of
+                      <strong>Yan Ji-Ci Scholarship</strong>, Institute of
                       Physics, Chinese Academy of Sciences, 2020
                     </li>
                     <li>
