--- a/research/index.html
+++ b/research/index.html
@@ -106,7 +106,7 @@
                 <p>
                   Throughout my research journey, I have worked with various
                   <strong>quantum computing</strong> platforms, including
-                  <strong>trapped ions</strong>, <strong>Rydberg atoms</strong>,
+                  <strong>trapped ions</strong>, <strong>neutral atoms</strong>,
                   and <strong>semiconductors</strong>. These experiences have
                   provided me with a comprehensive perspective on quantum
                   computing as a multifaceted field, encompassing
