--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
             <header>
               <h2>
                 <a href="#publications" class="scrolly"
-                  >Publications & Preprints</a
+                  >Journal Articles & Preprints</a
                 >
               </h2>
             </header>
