--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,7 @@
                     <a href="https://arxiv.org/abs/2411.14037"
                       >arXiv:2411.14037</a
                     ></i
-                  >, 2024.
+                  >, 2024. (<a href="https://arxiv.org/pdf/2411.14037">PDF</a>)
                 </li>
               </ul>
             </section>
