--- a/photography.html
+++ b/photography.html
@@ -25,7 +25,7 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1>Life is more than Physics</h1>
+            <h1>Photography</h1>
           </header>
         </div>
 
@@ -69,19 +69,6 @@
       </div>
 
       <!-- Main -->
-      <div class="wrapper style1">
-        <div class="container">
-          <article id="photography" class="special">
-            <header>
-              <h2><a href="#photography" class="scrolly">Photography</a></h2>
-              <p>
-                I enjoy capturing the beauty of the world. Here are some of my
-                favorite photos.
-              </p>
-            </header>
-          </article>
-        </div>
-      </div>
 
       <!-- Carousel -->
       <section class="carousel">
