--- a/photography.html
+++ b/photography.html
@@ -73,7 +73,7 @@
       <iframe
         width="560"
         height="315"
-        src="https://youtu.be/PSpghrPLQXI"
+        src="https://youtube.com/embed/PSpghrPLQXI"
         frameborder="0"
         allowfullscreen
       ></iframe>
