--- a/photography.html
+++ b/photography.html
@@ -69,14 +69,17 @@
       </div>
 
       <!-- Main -->
-
-      <iframe
-        width="560"
-        height="315"
-        src="https://youtube.com/embed/PSpghrPLQXI"
-        frameborder="0"
-        allowfullscreen
-      ></iframe>
+      <div class="wrapper style1">
+        <section class="container special">
+          <iframe
+            width="560"
+            height="315"
+            src="https://youtube.com/embed/PSpghrPLQXI"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </section>
+      </div>
 
       <!-- Carousel -->
       <section class="carousel">
