--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                 </p>
                 <p>
                   I am always on the lookout for opportunities to expand my
-                  knowledge and skills. Whether through collaborative projects,
-                  internships, or further academic research, I'm eager to
-                  connect with like-minded individuals and organizations. If
-                  you're interested in my research or potential collaboration,
-                  please feel free to reach out!
+                  knowledge and skills. I'm eager to connect with like-minded
+                  individuals and organizations whether through collaborative
+                  projects, internships, or further academic research. If you're
+                  interested in my research or potential collaboration, please
+                  feel free to reach out!
                 </p>
                 <audio id="name-audio">
                   <source
@@ -166,7 +166,7 @@
                   />
                 </audio>
                 <footer>
-                  <a href="/docs/CV_ChenHuang.pdf" class="button">My Full CV</a>
+                  <a href="/docs/CV_ChenHuang.pdf" class="button">My CV</a>
                 </footer>
               </section>
               <hr />
