--- a/photography.html
+++ b/photography.html
@@ -69,7 +69,7 @@
       </div>
 
       <!-- Main -->
-      <div class="wrapper style1">
+      <div class="wrapper style1 col-12-mobile">
         <section class="container special">
           <header>
             <h3>2024 Through My Lens</h3>
