--- a/photography.html
+++ b/photography.html
@@ -69,14 +69,12 @@
       </div>
 
       <!-- Main -->
-      <div class="wrapper style1 col-12-mobile">
+      <div class="wrapper style1">
         <section class="container special">
           <header>
             <h3>2024 Through My Lens</h3>
             <br />
             <iframe
-              width="560"
-              height="315"
               src="https://youtube.com/embed/PSpghrPLQXI"
               frameborder="0"
               allowfullscreen
