--- a/photography.html
+++ b/photography.html
@@ -74,11 +74,13 @@
           <header>
             <h3>2024 Through My Lens</h3>
             <br />
-            <iframe
-              src="https://youtube.com/embed/PSpghrPLQXI"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+            <div class="video-container">
+              <iframe
+                src="https://youtube.com/embed/PSpghrPLQXI"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </header>
         </section>
       </div>
