--- a/photography.html
+++ b/photography.html
@@ -69,18 +69,20 @@
       </div>
 
       <!-- Main -->
+      <!-- Main -->
       <div class="wrapper style1">
         <section class="container special">
           <header>
             <h3>2024 Through My Lens</h3>
+            <br />
+            <div class="video-container">
+              <iframe
+                src="https://youtube.com/embed/PSpghrPLQXI"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </header>
-          <div class="video-container">
-            <iframe
-              src="https://youtube.com/embed/PSpghrPLQXI"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
-          </div>
         </section>
       </div>
 
