--- a/test.html
+++ b/test.html
@@ -127,6 +127,12 @@
         <div class="timeline-date">2023-2025</div>
         <p>M.Sc. in Physics with extended research...</p>
       </div>
+      <div class="timeline-point"></div>
+      <div class="timeline-content">
+        <h3>Huazhong University of Science and Technology</h3>
+        <div class="timeline-date">2023-2025</div>
+        <p>M.Sc. in Physics with extended research...</p>
+      </div>
     </div>
     <!-- 其他时间轴项 -->
   </style>
