--- a/presentations.html
+++ b/presentations.html
@@ -59,6 +59,7 @@
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/presentations.html">Presentations</a></li>
             <li><a href="/notes/index.html">Notes</a></li>
+            <li><a href="/outreach/ibpe.html">Outreach</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
