--- a/research/charge-noise-in-semiconductor-spin-qubits.html
+++ b/research/charge-noise-in-semiconductor-spin-qubits.html
@@ -58,6 +58,7 @@
             <li><a href="/publications.html">Publications</a></li>
             <li><a href="/presentations.html">Presentations</a></li>
             <li><a href="/notes/index.html">Notes</a></li>
+            <li><a href="/outreach/ibpe.html">Outreach</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
