--- a/notes/index.html
+++ b/notes/index.html
@@ -100,6 +100,32 @@
               <br /><br />
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
+              <!-- 在页面顶部添加搜索框 -->
+              <div class="search-container">
+                <input
+                  type="text"
+                  id="noteSearch"
+                  placeholder="Search notes..."
+                />
+                <button type="button"><i class="fas fa-search"></i></button>
+              </div>
+
+              <script>
+                // 简单搜索实现
+                document
+                  .getElementById("noteSearch")
+                  .addEventListener("input", function (e) {
+                    const searchTerm = e.target.value.toLowerCase();
+                    document
+                      .querySelectorAll(".course-card")
+                      .forEach((card) => {
+                        const text = card.textContent.toLowerCase();
+                        card.style.display = text.includes(searchTerm)
+                          ? "block"
+                          : "none";
+                      });
+                  });
+              </script>
               <article id="main">
                 <p>
                   Sorted by &nbsp;
