--- a/notes/index.html
+++ b/notes/index.html
@@ -143,14 +143,14 @@
                 .search-container button {
                   padding: 6px 10px;
                   border: none;
-                  background-color: #007bff;
+                  background-color: #ef8376;
                   color: white;
                   cursor: pointer;
                   border-radius: 4px;
                 }
 
                 .search-container button:hover {
-                  background-color: #0056b3;
+                  background-color: #ef8376;
                 }
               </style>
               <article id="main">
