--- a/notes/index.html
+++ b/notes/index.html
@@ -175,28 +175,42 @@
                     physics-related courses I've taken at Imperial College
                     London.
                   </p>
-                  <ul>
-                    <li>
-                      <strong>Quantum Information (Fall 2023)</strong>
-                      <br />
-                      This course was taught by Prof. Myungshik Kim. My notes
-                      were based on his lecture notes and the textbook by
-                      Nielsen and Chuang.<br />
-                      <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
-                        >Study Notes: </strong
-                      ><a href="/docs/notes/notes-on-quantum-information.pdf"
-                        >Quantum Information</a
-                      >
-                    </li>
-                  </ul>
+
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Quantum Information (Fall 2023)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Core</span>
+                      </div>
+                    </div>
+                    <div class="course-body">
+                      <p>
+                        This course was taught by Prof. Myungshik Kim. My notes
+                        were based on his lecture notes and the textbook by
+                        Nielsen and Chuang.
+                      </p>
+                      <div class="resource-links">
+                        <a
+                          href="/docs/notes/notes-on-quantum-information.pdf"
+                          class="button small"
+                          ><i class="fas fa-book"></i> Study Notes</a
+                        >
+                        <a
+                          href="/docs/notes/notes-on-quantum-optics.pdf"
+                          class="button small"
+                          ><i class="fas fa-star"></i> Review Notes</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+
                   <ul>
                     <li>
                       <strong>Quantum Optics (Fall 2023)</strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
-                      ><a href="/docs/notes/notes-on-quantum-optics.pdf"
-                        >Quantum Optics</a
-                      >
+                      ><a href="">Quantum Optics</a>
                     </li>
                   </ul>
                   <ul>
@@ -679,3 +693,26 @@
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
+
+<style>
+  /* 卡片式布局样式 */
+  .course-card {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1.5rem;
+    padding: 1.5rem;
+  }
+  .course-header {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  .pill {
+    background: #f0f0f0;
+    border-radius: 15px;
+    padding: 2px 8px;
+    font-size: 0.8em;
+    margin-left: 8px;
+  }
+</style>
