--- a/notes/index.html
+++ b/notes/index.html
@@ -196,10 +196,25 @@
                           class="button small"
                           ><i class="fas fa-book"></i> Study Notes</a
                         >
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="course-card">
+                    <div class="course-header">
+                      <h4>Quantum Optics (Fall 2023)</h4>
+                      <div class="course-meta">
+                        <span class="pill">Graduate</span>
+                        <span class="pill">Core</span>
+                      </div>
+                    </div>
+                    <div class="course-body">
+                      <p></p>
+                      <div class="resource-links">
                         <a
                           href="/docs/notes/notes-on-quantum-optics.pdf"
                           class="button small"
-                          ><i class="fas fa-star"></i> Review Notes</a
+                          ><i class="fas fa-book"></i> Study Notes</a
                         >
                       </div>
                     </div>
@@ -207,7 +222,7 @@
 
                   <ul>
                     <li>
-                      <strong>Quantum Optics (Fall 2023)</strong><br />
+                      <strong></strong><br />
                       <i class="far fa-bookmark"></i>&nbsp;&nbsp;<strong
                         >Study Notes: </strong
                       ><a href="">Quantum Optics</a>
